--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="../burbank-big-condensed-black.otf">
+    <link rel="stylesheet" href="./css/new-style.css">
 </head>
 
 <body>
@@ -72,32 +71,6 @@
         <div class="i">I</div>
         <div class="t">T</div>
         <div class="e">E</div>
-    </div>
-
-    <div class="statistic">
-        <div class="statistic-all">
-            <ul class="statistic-all-ul">
-                <li>Kills</li>
-                <li>Wins</li>
-                <li>K/D</li>
-            </ul>
-            <ul class="statistic-all-ul-values">
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
-        </div>
-        <div class="statistic-gamemodes">
-            <div class="statistic-solo">
-
-            </div>
-            <div class="statistic-duo">
-
-            </div>
-            <div class="statistic-squads">
-
-            </div>
-        </div>
     </div>
 
     <div class="footer">
